fix:  removed the overlapping of the charts in .charts-container
correctly fitted the charts into <div className='charts-container'/>  without overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,8 @@ input[type="number"] {
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 100%;
-  max-width: 900px
+  max-width: 1200px;
+  min-width: 550px
 }
 
 @media (max-width: 768px) {
